--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+}
+
 .hidden{
     display: none;
 }
@@ -17,4 +30,93 @@ img {
     bottom:0px;
     z-index: -1;
     opacity:80%;
+}
+
+input{
+    border: none;
+    border-bottom: 1px solid white;
+    background-color: transparent;
+}
+input::placeholder{
+    color: white;
+}
+
+.login-form,
+.todo-form {
+    margin-bottom: 20px;
+}
+
+.login-form.hidden,
+.greeting.hidden {
+    display: none;
+}
+.login-form button {
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 6px;
+}
+
+.clock {
+    font-size: 150px;
+    margin-bottom: 20px;
+    color: white;
+}
+
+.todo-form input[type="text"],
+.todo-li {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.todo-form input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.todo-li li {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: transparent;
+    color: white;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.todo-li li:last-child {
+    margin-bottom: 0;
+}
+
+.todo-li li input[type="checkbox"] {
+    margin-right: 10px;
+}
+
+.quote,
+.weather {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.quote span,
+.weather span {
+    margin-right: 10px;
+    color: white;
+}
+
+.quote span {
+    font-style: italic;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.weather span {
+    font-weight: bold;
 }
